# haskell-bytestring-short

./: .hgtags  .travis.yml  LICENSE  bytestring-short.cabal
cbits/: short_fpstring.c
compat/Data/ByteString/Short/: Compat.hs
include/: short_fpstring.h
src/Data/ByteString/Short/: Internal.hs
tests/: Properties.hs
