
name:                bytestring-short
version:             0.0.1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kei HIBINO
maintainer:          ex8k.hibino@gmail.com
-- copyright:
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
                       Data.ByteString.Short
                       Data.ByteString.Short.Internal
  -- other-modules:

  other-extensions:
                       DeriveDataTypeable
                       CPP
                       BangPatterns
                       RankNTypes
                       ForeignFunctionInterface
                       MagicHash
                       UnboxedTuples
                       UnliftedFFITypes
                       Unsafe

  build-depends:         base >=4.2 && <5
                       , bytestring >=0.10 && <0.10.4
                       , deepseq >=1.1
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:
                       -Wall

  c-sources:         cbits/short_fpstring.c
  include-dirs:      include
  includes:          short_fpstring.h
  install-includes:  short_fpstring.h
